# multi-robot-perception-gnn-1

./: README.md  Simulator Script-Nov13.ipynb  Simulator Script-Oct 23rd.ipynb  data_vis.ipynb  dataloader.py  eval.py  eval_camera.sh  flight_record.py  generate_camera.sh  generate_feature.py  models.py  quaternion.cpp  train_camera.sh  training.py  training_curve.ipynb  utils.py
PoseRotation/: Conduction.cpp  Conduction.hpp  quaternion.cpp
archived/: dataloader.py  eval.py  training.py
dgl/: dataloader.py  dataloader_utils.py  eval.py  eval_camera.sh  eval_camera_airsim_gcn2_seg.sh  eval_camera_airsim_gcn_compress_seg.sh  eval_camera_airsim_gcn_seg.sh  eval_camera_airsim_seg.sh  eval_camera_warehouse_gcn.sh  eval_camera_warehouse_gcn2.sh  eval_camera_warehouse_gcn2_resnet50.sh  eval_camera_warehouse_gcn_resnet50.sh  eval_camera_warehouse_gcn_seg.sh  eval_camera_warehouse_seg.sh  eval_seg.py  model.py  train_camera.sh  train_camera_airsim_depth.sh  train_camera_airsim_depthseg.sh  train_camera_airsim_gcn2_depth.sh  train_camera_airsim_gcn2_depthseg.sh  train_camera_airsim_gcn2_seg.sh  train_camera_airsim_gcn_compress_depth.sh  train_camera_airsim_gcn_compress_depthseg.sh  train_camera_airsim_gcn_compress_seg.sh  train_camera_airsim_seg.sh  (+14 more)
flightros/: package.xml
flightros/include/flightros/: flight_pilot.hpp  flight_record.hpp
flightros/launch/: rotors_gazebo.launch  rotors_gazebo_test.launch
flightros/params/: default.yaml
flightros/src/: flight_pilot.cpp  flight_record.cpp  flight_record.py  flight_record_node.cpp
flightros/src/pilot/: flight_pilot.cpp
(+33 files in other folders)
